--- a/README
+++ b/README
@@ -15,6 +15,7 @@ TODO:
  ☐ volumes should be exponential
  ☑ pitch bend
  ☐ pitch bend range
+ ☐ verify panning calculations
  ☐ tremolo and vibrato
  ☑ ping-pong sample looping
  ☐ what's the loop fractions byte?
