--- a/README
+++ b/README
@@ -16,8 +16,8 @@ TODO:
  ☐ pitch bend range
  ☐ verify panning calculations
  ☑ tremolo
- ☐ vibrato
- ☐ what's wrong with some of the drums
+ ☑ vibrato
+ ☑ what's wrong with some of the drums
  ☑ ping-pong sample looping
  ☐ what's the loop fractions byte?
  ☐ loop markers
